<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools">

    <View
        android:id="@+id/historyToolbar"
        android:layout_width="match_parent"
        android:layout_height="64dp"
        android:background="@color/white"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/historyTitleTv"
        style="@style/Title.Medium"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/history_title"
        app:layout_constraintBottom_toTopOf="@+id/historyToolbarDivider"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/historyContentContainer"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="@color/background_empty"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/historyToolbarDivider">

        <ImageView
            android:id="@+id/historyEmptyIv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="21dp"
            android:src="@drawable/ic_measurment_empty"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/historyEmptyTitleTv"
            tools:ignore="ContentDescription" />

        <TextView
            android:id="@+id/historyEmptyTitleTv"
            style="@style/Body.Large"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="12dp"
            android:text="@string/history_empty_title"
            android:gravity="center_horizontal"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/historyEmptyCenterView"/>

        <View
            android:id="@+id/historyEmptyCenterView"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent" />

        <TextView
            android:id="@+id/historyEmptyDescriptionTv"
            style="@style/Label.ExtraLarge"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:text="@string/history_empty_description"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/historyEmptyCenterView"/>

        <Button
            android:id="@+id/historyEmptyAddMeasurementBtn"
            style="@style/ButtonPrimary.Drawable"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:drawableStart="@drawable/ic_add_white"
            android:text="@string/history_empty_add"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/historyEmptyDescriptionTv"/>

        <androidx.constraintlayout.widget.Group
            android:id="@+id/historyEmptyGroup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:constraint_referenced_ids="historyEmptyIv,historyEmptyTitleTv,historyEmptyDescriptionTv,historyEmptyAddMeasurementBtn"/>

        <include
            android:id="@+id/loadingContainer"
            layout="@layout/part_view_loading" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <View
        android:id="@+id/historyToolbarDivider"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@drawable/view_shadow_bottom"
        app:layout_constraintTop_toBottomOf="@+id/historyToolbar" />

    <com.zipoapps.android.common.ui.error.ErrorItem
        android:id="@+id/errorItem"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="6dp"
        app:layout_constraintBottom_toBottomOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>